# aptos-rust-tutorial2

./: Cargo.toml
src/: main.rs
