[package]
name = "aptos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

anyhow = "1.0.75"
once_cell = "1.18.0"
url = "2.4.0"
tokio = { version = "1.21.0", features = ["full"] }
rand = "0.7.3"
hex = "0.4.3"
reqwest = "0.11.20"
tiny-keccak = "2.0.2"
serde = "1.0.188"
serde_json = "1.0.105"
fixed-hash = "0.8.0"
sha3 = "0.10.8"
uint = "0.9.5"
borsh = "0.10.3"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }

[build]
rustflags = ["--cfg", "tokio_unstable"]